fixing picture alignment

--- a/client/src/app/components/login-registration/login/login.component.scss
+++ b/client/src/app/components/login-registration/login/login.component.scss
@@ -1,6 +1,6 @@
 .form {
     float: right;
-    height: 630px;
+    height: 610px;
     background-image: linear-gradient(rgb(207, 223, 230), white);
     opacity: 0.98;
     width: 40%;
